RESOLVED FIXED130135
Layout Test fast/workers/worker-gc.html is failing
https://bugs.webkit.org/show_bug.cgi?id=130135
Summary Layout Test fast/workers/worker-gc.html is failing
Jer Noble
Reported 2014-03-12 09:21:03 PDT
The following layout test is failing on [insert platform] fast/workers/worker-gc.html Probable cause: http://trac.webkit.org/changeset/165458/
Attachments
Patch (3.28 KB, patch)
2014-03-12 09:56 PDT, Mark Hahnenberg
no flags
Mark Hahnenberg
Comment 1 2014-03-12 09:56:32 PDT
Mark Hahnenberg
Comment 2 2014-03-12 10:04:39 PDT
Comment on attachment 226522 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=226522&action=review > Source/JavaScriptCore/ChangeLog:11 > + so that allocators are notified when with lastChanceToFinalize. This will give them s/when//
Jer Noble
Comment 3 2014-03-12 10:08:31 PDT
FYI, it looks like fast/workers/dedicated-worker-lifecycle.html also started crashing, but unhelpfully without a crash log.
Geoffrey Garen
Comment 4 2014-03-12 10:48:32 PDT
Comment on attachment 226522 [details] Patch r=me
Mark Hahnenberg
Comment 5 2014-03-12 11:18:19 PDT
Mark Hahnenberg
Comment 6 2014-03-12 11:18:38 PDT
Comment on attachment 226522 [details] Patch Clearing review flag.
Note You need to log in before you can comment on or make changes to this bug.